name:              ln-yesod
version:           0.0.0
cabal-version:     >= 1.22
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    default-language:  Haskell2010
    hs-source-dirs: src, app
    exposed-modules: Application
                     Application.Prelude
                     Api.Auth
                     Api.Params
                     Api.Response
                     All.GlobalGroup
                     All.Like
                     All.Star
                     All.TeamMember
                     Foundation
                     Handler.Prelude
                     Handler.Api
                     Handler.Board
                     Handler.Common
                     Handler.Empty
                     Handler.Forum
                     Handler.Leuron
                     Handler.Me
                     Handler.Organization
                     Handler.Pm
                     Handler.PmIn
                     Handler.PmOut
                     Handler.Profile
                     Handler.Reminder
                     Handler.Resource
                     Handler.Root
                     Handler.SPA
                     Handler.Team
                     Handler.Thread
                     Handler.ThreadPost
                     Handler.User
                     Helper.Request
                     Import
                     Import.NoFoundation
                     Misc
                     Misc.Codec
                     Misc.Magic
                     Misc.Widget
                     Model
                     Model.Prelude
                     Model.All
                     Model.Access
                     Model.Parent
                     Model.Api
                     Model.Api.Function
                     Model.Api.Internal
                     Model.Board
                     Model.Board.Function
                     Model.Board.Internal
                     Model.DerivePersist
                     Model.Empty
                     Model.Empty.Function
                     Model.Empty.Internal
                     Model.Ent.DerivePersist
                     Model.Forum
                     Model.Forum.Function
                     Model.Forum.Internal
                     Model.Keys
                     Model.Leuron
                     Model.Leuron.Function
                     Model.Leuron.Internal
                     Model.LeuronTraining
                     Model.LeuronTraining.DerivePersist
                     Model.LeuronTraining.Function
                     Model.LeuronTraining.Internal
                     Model.Like.DerivePersist
                     Model.Me
                     Model.Me.Internal
                     Model.Misc
                     Model.Organization
                     Model.Organization.Function
                     Model.Organization.Internal
                     Model.Pack
                     Model.Pack.Organization
                     Model.Pack.User
                     Model.Pack.Sanitized.User
                     Model.Pack.Team
                     Model.Pack.Forum
                     Model.Pack.Board
                     Model.Pack.Thread
                     Model.Pack.ThreadPost
                     Model.Pack.Resource
                     Model.Pack.Leuron
                     Model.Pm
                     Model.Pm.Function
                     Model.Pm.Internal
                     Model.PmIn
                     Model.PmIn.Function
                     Model.PmIn.Internal
                     Model.PmOut
                     Model.PmOut.Function
                     Model.PmOut.Internal
                     Model.Profile
                     Model.Profile.DerivePersist
                     Model.Profile.Function
                     Model.Profile.Internal
                     Model.Reminder
                     Model.Reminder.Function
                     Model.Reminder.Internal
                     Model.Resource
                     Model.Resource.Function
                     Model.Resource.Internal
                     Model.Team
                     Model.Team.Function
                     Model.Team.Internal
                     Model.Thread
                     Model.Thread.Function
                     Model.Thread.Internal
                     Model.ThreadPost
                     Model.ThreadPost.Function
                     Model.ThreadPost.Internal
                     Model.User
                     Model.User.Function
                     Model.User.Internal
                     Model.User.Internal2
                     Settings
                     Settings.StaticFiles
                     Socket

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -fno-warn-orphans
    else
        ghc-options:   -Wall -fwarn-tabs -O2 -fno-warn-orphans

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        FlexibleInstances
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections
                        RecordWildCards
                        RankNTypes

    default-extensions: OverloadedStrings
                        DeriveGeneric
                        RankNTypes

    build-depends: base
                 , ln-types
                 , ln-lib
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-auth-account
                 , yesod-auth-oauth2 == 0.1.9.99
                 , yesod-static
                 , yesod-form
--                 , yesod-bootstrap
                 , yesod-test
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , wai-cors
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

--               , esqueleto
                 , esqueleto
                 , GenericPretty
                 , gravatar
                 , hedis
                 , http-types
                 , lens
                 , markdown
                 , mtl
                 , random
                 , SHA
                 , transformers
                 , uuid
                 , wai

                 , random-fu
                 , random-extras
                 , random-source

                 -- for chat socket example
                 , conduit-combinators
                 , lifted-base
                 , stm-lifted
                 , yesod-websockets

                 , blaze-html
--                 , cryptonite
                 , pureMD5
                 , safe
                 , hoauth2

executable         ln-yesod
    default-language:  Haskell2010

    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, ln-yesod

--    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
    ghc-options:       -Wall -threaded -O0 -fobject-code -j

-- executable         ln-shell
--    if flag(library-only)
--        Buildable: False

--    main-is:           shell.hs
--    hs-source-dirs:    app
--    build-depends:     base, ln-yesod, Shellac

--    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N



-- test-suite test
--    default-language:  Haskell2010
--    type:              exitcode-stdio-1.0
--    main-is:           Spec.hs
--    hs-source-dirs:    test
--    ghc-options:       -Wall

--    default-extensions: TemplateHaskell
--                        QuasiQuotes
--                        OverloadedStrings
--                        NoImplicitPrelude
--                        CPP
--                        MultiParamTypeClasses
--                        TypeFamilies
--                        GADTs
--                        GeneralizedNewtypeDeriving
--                        FlexibleContexts
--                        FlexibleInstances
--                        EmptyDataDecls
--                        NoMonomorphismRestriction
--                        DeriveDataTypeable
--                        ViewPatterns
--                        TupleSections

--    build-depends: base
--                 , ln-yesod
--                 , yesod-test >= 1.4.3 && < 1.5
--                 , yesod-core
--                 , yesod
--                 , persistent
--                 , persistent-postgresql
--                 , resourcet
--                 , monad-logger
--                 , shakespeare
--                 , transformers
--                 , hspec >= 2.0.0
--                 , classy-prelude
--                 , classy-prelude-yesod
