name:              ln-yesod
version:           0.0.0
cabal-version:     >= 1.22
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    default-language:  Haskell2010
    hs-source-dirs: src, app
    exposed-modules: LN.Application
                     LN.Application.Prelude
                     LN.Api.Auth
                     LN.Api.Params
                     LN.All.Internal
                     LN.All.Api
                     LN.All.Board
                     LN.All.Empty
                     LN.All.Forum
                     LN.All.GlobalGroup
                     LN.All.Leuron
                     LN.All.LeuronTraining
                     LN.All.Like
                     LN.All.Me
                     LN.All.Organization
                     LN.All.Pm
                     LN.All.PmIn
                     LN.All.PmOut
                     LN.All.Prelude
                     LN.All.Profile
                     LN.All.Reminder
                     LN.All.Resource
                     LN.All.SPA
                     LN.All.Star
                     LN.All.Team
                     LN.All.Thread
                     LN.All.ThreadPost
                     LN.All.TeamMember
                     LN.All.User
                     LN.All.User.Shared
                     LN.All.View
                     LN.All.Pack.Me
                     LN.All.Pack.Organization
                     LN.All.Pack.User
                     LN.All.Pack.Sanitized.User
                     LN.All.Pack.GlobalGroup
                     LN.All.Pack.Team
                     LN.All.Pack.TeamMember
                     LN.All.Pack.Forum
                     LN.All.Pack.Board
                     LN.All.Pack.Thread
                     LN.All.Pack.ThreadPost
                     LN.All.Pack.Resource
                     LN.All.Pack.Leuron
                     LN.All.Pack.PmIn
                     LN.All.Pack.PmOut
                     LN.Access
                     LN.Cache
                     LN.Cache.Internal
                     LN.Control
                     LN.Db
                     LN.Error
                     LN.Foundation
                     LN.Handler.Common
                     LN.Handler.Root
                     LN.Helper.Request
                     LN.Import
                     LN.Import.NoFoundation
                     LN.Job.Shared
                     LN.Job.Enqueue
                     LN.Worker
                     LN.Worker.Internal
                     LN.Lifted
                     LN.Parent
                     LN.OAuth2
                     LN.Misc
                     LN.Misc.Codec
                     LN.Misc.Widget
                     LN.Model
                     LN.Model.DerivePersist
                     LN.Model.Keys
                     LN.Model.Misc
                     LN.Old
                     LN.Settings
                     LN.Settings.Internal
                     LN.Settings.StaticFiles
                     LN.Socket

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -fno-warn-orphans
    else
        ghc-options:   -Wall -fwarn-tabs -O2 -fno-warn-orphans

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        FlexibleInstances
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections
                        RecordWildCards
                        RankNTypes

    default-extensions: OverloadedStrings
                        DeriveGeneric
                        RankNTypes

    build-depends: base
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-auth-account
                 , yesod-auth-oauth2
                 , yesod-static
                 , yesod-form
                 , yesod-test
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , wai-cors
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

                 , esqueleto
                 , GenericPretty
                 , gravatar
                 , hedis
                 , http-types
                 , lens
                 , markdown
                 , mtl
                 , random
                 , SHA
                 , transformers
                 , uuid
                 , wai

                 , random-fu
                 , random-extras
                 , random-source

                 -- for chat socket example
                 , conduit-combinators
                 , lifted-async
                 , lifted-base
                 , stm-lifted
                 , yesod-websockets

                 , blaze-html
                 , pureMD5
                 , safe
                 , hoauth2
                 , amqp
                 , resourcet
                 , either
                 , string-conversions
                 , monad-loops
                 , data-default
                 , serversession
                 , serversession-backend-persistent
                 , serversession-frontend-yesod

                 , ln-lib
                 , ln-sanitize
                 , ln-validate
                 , haskell-ln-types
                 , haskell-ebyam
                 , haskell-rehtie
                 , haskell-ifte
                 , haskell-either-helpers



executable         ln-yesod
    default-language:  Haskell2010

    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, ln-yesod

    ghc-options:       -Wall -threaded -O0 -fobject-code -j



executable         ln-bg
    default-language:  Haskell2010

    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    ln-bg
    build-depends:     base, ln-yesod, haskell-ln-types
    ghc-options:       -Wall -Werror -threaded -O2 -rtsopts -with-rtsopts=-N  -fobject-code -j



executable         ln-bg-test
    default-language:  Haskell2010

    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    ln-bg-test
    build-depends:     base, ln-yesod, ln-validate, haskell-ln-types
    ghc-options:       -Wall -threaded -O0 -fobject-code -j
