name:              lnforum-yesod
version:           0.0.1
cabal-version:     >= 1.22
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    default-language:  Haskell2010
    hs-source-dirs: src, app
    exposed-modules: LN.Application
                     LN.Application.Prelude
                     LN.Api.Auth
                     LN.Api.Params
                     LN.All.Internal
                     LN.All.Api
                     LN.All.Empty
                     LN.All.Me
                     LN.All.Prelude
                     LN.All.Profile
                     LN.All.SPA
                     LN.All.User
                     LN.All.User.Shared
                     LN.All.Pack.Me
                     LN.All.Pack.User
                     LN.All.Pack.Sanitized.User
                     LN.Access
                     LN.Cache
                     LN.Cache.Internal
                     LN.Control
                     LN.Db
                     LN.Error
                     LN.Foundation
                     LN.Handler.Common
                     LN.Handler.Root
                     LN.Helper.Request
                     LN.Import
                     LN.Import.NoFoundation
                     LN.Job.Shared
                     LN.Job.Enqueue
                     LN.Worker
                     LN.Worker.Internal
                     LN.Lifted
                     LN.Parent
                     LN.OAuth2
                     LN.Misc
                     LN.Misc.Codec
                     LN.Misc.Widget
                     LN.Model
                     LN.Model.DerivePersist
                     LN.Model.Keys
                     LN.Model.Misc
                     LN.Settings
                     LN.Settings.Internal
                     LN.Settings.StaticFiles
                     LN.Socket

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0 -fno-warn-orphans
    else
        ghc-options:   -Wall -fwarn-tabs -O2 -fno-warn-orphans

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        FlexibleInstances
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections
                        RecordWildCards
                        RankNTypes

    default-extensions: OverloadedStrings
                        DeriveGeneric
                        RankNTypes

    build-depends: base
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-auth-account
                 , yesod-auth-oauth2
                 , yesod-static
                 , yesod-form
                 , yesod-test
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , wai-cors
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time

                 , esqueleto
                 , GenericPretty
                 , gravatar
                 , hedis
                 , http-types
                 , lens
                 , markdown
                 , mtl
                 , random
                 , SHA
                 , transformers
                 , uuid
                 , wai

                 , random-fu
                 -- , random-extras
                 , random-source

                 -- for chat socket example
                 , conduit-combinators
                 , lifted-async
                 , lifted-base
                 , stm-lifted
                 , yesod-websockets

                 , blaze-html
                 , blaze-markup
                 , pureMD5
                 , safe
                 , hoauth2
                 , amqp
                 , resourcet
                 , either
                 , string-conversions
                 , monad-loops
                 , data-default
                 , serversession
                 , serversession-backend-persistent
                 , serversession-frontend-yesod

                 , lnforum-lib
                 , lnforum-sanitize
                 , lnforum-validate
                 , lnforum-types-gen
                 , haskell-ebyam
                 , haskell-rehtie
                 , haskell-ifte
                 , haskell-either-helpers



executable         lnforum-yesod
    default-language:  Haskell2010

    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, lnforum-yesod

    ghc-options:       -Wall -threaded -O0 -fobject-code -j



executable         lnforum-bg
    default-language:  Haskell2010

    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    lnforum-bg
    build-depends:     base, lnforum-yesod, lnforum-types-gen
    ghc-options:       -Wall -Werror -threaded -O2 -rtsopts -with-rtsopts=-N  -fobject-code -j



executable         lnforum-bg-test
    default-language:  Haskell2010

    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    lnforum-bg-test
    build-depends:     base, lnforum-yesod, lnforum-validate, lnforum-types-gen
    ghc-options:       -Wall -threaded -O0 -fobject-code -j
